@@ -1,3 +1,8 @@
+2006-05-04	Benedikt Meurer <benny@xfce.org>
+
+	* xfce4-autostart-editor/xfae-model.c(xfae_item_new): Properly handle
+	  OnlyShowIn and NotShowIn in the autostart editor.
+
 2006-04-19	Benedikt Meurer <benny@xfce.org>
 
 	* settings/session/session.c(mcs_plugin_init),
